@@ -1,3 +1,4 @@
+2015-07-01 Added Horizontal Bar and reading out the data from the individual Squeeze sensors in LearnPen Report module
 2015-07-01 Fixed issue with custom classes in Editor
 2015-06-30 Fixed issue with dragging in multiple gap module
 2015-06-26 Fixed issue with few Paragraphs with placeholders on the same page
